force-app/main/default/objects/Activity__c/Activity__c.object-meta.xml
<CustomObject>
    <label>TWR Activities</label>
    <nameField>
        <label>Activity  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TWR Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>