force-app/main/default/objects/Activity__c/fields/Activity_End_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Activity_End_Date_Time__c</fullName>
    <label>Activity End Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>