force-app/main/default/objects/Activity__c/fields/AgeOfParticipants_DidNotRespond__c.field-meta.xml
<CustomField>
    <fullName>AgeOfParticipants_DidNotRespond__c</fullName>
    <label>Age of participants did not respond</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>