force-app/main/default/objects/Activity__c/fields/AgeOfParticipants_Kaum_tua__c.field-meta.xml
<CustomField>
    <fullName>AgeOfParticipants_Kaum_tua__c</fullName>
    <label>Age Kaumātua</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>