force-app/main/default/objects/Activity__c/fields/AgeOfParticipants_Mokopuna__c.field-meta.xml
<CustomField>
    <fullName>AgeOfParticipants_Mokopuna__c</fullName>
    <label>Age Mokopuna</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>