force-app/main/default/objects/Activity__c/fields/AgeOfParticipants_Pakeke40_59__c.field-meta.xml
<CustomField>
    <fullName>AgeOfParticipants_Pakeke40_59__c</fullName>
    <label>Age 40-59</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>