force-app/main/default/objects/Activity__c/fields/AgeOfParticipants_Pakeke_20_39__c.field-meta.xml
<CustomField>
    <fullName>AgeOfParticipants_Pakeke_20_39__c</fullName>
    <label>Age Pakeke (20-39)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>