force-app/main/default/objects/Activity__c/fields/AgeOfParticipants_Rangatahi13_15__c.field-meta.xml
<CustomField>
    <fullName>AgeOfParticipants_Rangatahi13_15__c</fullName>
    <label>Age 13-15</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>