force-app/main/default/objects/Activity__c/fields/AgeOfParticipants_Rangatahi13_19__c.field-meta.xml
<CustomField>
    <fullName>AgeOfParticipants_Rangatahi13_19__c</fullName>
    <label>Age Rangatahi 13 - 19</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>