force-app/main/default/objects/Activity__c/fields/AgeOfParticipants_Total__c.field-meta.xml
<CustomField>
    <fullName>AgeOfParticipants_Total__c</fullName>
    <formula>AgeOfParticipants_DidNotRespond__c  +  AgeOfParticipants_Kaum_tua__c  +  AgeOfParticipants_Mokopuna__c  +  AgeOfParticipants_Pakeke40_59__c + AgeOfParticipants_Matua_20_39__c  +  AgeOfParticipants_Rangatahi13_19__c  + AgeOfParticipants_Taiohi__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age Of Participants Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>