force-app/main/default/objects/Activity__c/fields/By_ActivityGMDmanaged__c.field-meta.xml
<CustomField>
    <fullName>By_ActivityGMDmanaged__c</fullName>
    <label>By GMD Managed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>--None--</fullName>
            </value>
            <value>
                <fullName>Fully</fullName>
            </value>
            <value>
                <fullName>Partially</fullName>
            </value>
            <value>
                <fullName>Not At All</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>