force-app/main/default/objects/Activity__c/fields/By_OrgGoverned__c.field-meta.xml
<CustomField>
    <fullName>By_OrgGoverned__c</fullName>
    <label>By Org Governed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Fully</fullName>
                <isActive>false</isActive>
                <label>Fully</label>
            </value>
            <value>
                <fullName>Not at all</fullName>
                <isActive>false</isActive>
                <label>Not at all</label>
            </value>
            <value>
                <fullName>Partially</fullName>
                <isActive>false</isActive>
                <label>Partially</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>