force-app/main/default/objects/Activity__c/fields/Change_Request_Approval__c.field-meta.xml
<CustomField>
    <fullName>Change_Request_Approval__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Change Request Approval</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>Kahiwi</value>
        </filterItems>
        <filterItems>
            <field>User.UserRole.Name</field>
            <operation>equals</operation>
            <value>General Manager</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>