force-app/main/default/objects/Activity__c/fields/Change_Request_Reason__c.field-meta.xml
<CustomField>
    <fullName>Change_Request_Reason__c</fullName>
    <label>Change Request Reason</label>
    <type>TextArea</type>
</CustomField>