force-app/main/default/objects/Activity__c/fields/COVID_19_ALERT_LEVEL__c.field-meta.xml
<CustomField>
    <fullName>COVID_19_ALERT_LEVEL__c</fullName>
    <label>COVID-19 ALERT LEVEL</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>