force-app/main/default/objects/Activity__c/fields/DiamensionBy_DescRichText__c.field-meta.xml
<CustomField>
    <fullName>DiamensionBy_DescRichText__c</fullName>
    <label>By Dimension</label>
    <length>100000</length>
    <type>Html</type>
</CustomField>