force-app/main/default/objects/Activity__c/fields/DiamensionFor_DescRichText__c.field-meta.xml
<CustomField>
    <fullName>DiamensionFor_DescRichText__c</fullName>
    <label>For Dimension</label>
    <length>100000</length>
    <type>Html</type>
</CustomField>