force-app/main/default/objects/Activity__c/fields/DiamensionInOn_DescRichText__c.field-meta.xml
<CustomField>
    <fullName>DiamensionInOn_DescRichText__c</fullName>
    <label>InOn Dimension</label>
    <length>100000</length>
    <type>Html</type>
</CustomField>