force-app/main/default/objects/Activity__c/fields/DiamensionThrough_DescRichText__c.field-meta.xml
<CustomField>
    <fullName>DiamensionThrough_DescRichText__c</fullName>
    <label>Through Dimension</label>
    <length>100000</length>
    <type>Html</type>
</CustomField>