force-app/main/default/objects/Activity__c/fields/DiamensionWith_DescRichText__c.field-meta.xml
<CustomField>
    <fullName>DiamensionWith_DescRichText__c</fullName>
    <label>With Dimension</label>
    <length>100000</length>
    <type>Html</type>
</CustomField>