force-app/main/default/objects/Activity__c/fields/Display_on_MaraeFit_App__c.field-meta.xml
<CustomField>
    <fullName>Display_on_MaraeFit_App__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display on MaraeFit App</label>
    <type>Checkbox</type>
</CustomField>