force-app/main/default/objects/Activity__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <label>Due Date For Report</label>
    <type>Date</type>
</CustomField>