force-app/main/default/objects/Activity__c/fields/Due_Date_For_Planned_Activities__c.field-meta.xml
<CustomField>
    <fullName>Due_Date_For_Planned_Activities__c</fullName>
    <label>Due Date For Planned Activity</label>
    <type>Date</type>
</CustomField>