force-app/main/default/objects/Activity__c/fields/EthnicityOfParticipants_DidNotRespond__c.field-meta.xml
<CustomField>
    <fullName>EthnicityOfParticipants_DidNotRespond__c</fullName>
    <label>Ethnicity Of Participants</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>