force-app/main/default/objects/Activity__c/fields/EthnicityOfParticipants_M_ori__c.field-meta.xml
<CustomField>
    <fullName>EthnicityOfParticipants_M_ori__c</fullName>
    <label>Ethnicity Māori</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>