force-app/main/default/objects/Activity__c/fields/EthnicityOfParticipants_Total__c.field-meta.xml
<CustomField>
    <fullName>EthnicityOfParticipants_Total__c</fullName>
    <formula>EthnicityOfParticipants_DidNotRespond__c  +  EthnicityOfParticipants_M_ori__c  +  EthnicityOfParticipants_Non_M_ori__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ethnicity Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>