force-app/main/default/objects/Activity__c/fields/Event_Organiser_Email__c.field-meta.xml
<CustomField>
    <fullName>Event_Organiser_Email__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>