force-app/main/default/objects/Activity__c/fields/Event_Organiser_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Event_Organiser_Last_Name__c</fullName>
    <label>Last Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>