force-app/main/default/objects/Activity__c/fields/Event_Organiser_Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>Event_Organiser_Mobile_Number__c</fullName>
    <label>Mobile Number</label>
    <type>Phone</type>
</CustomField>