force-app/main/default/objects/Activity__c/fields/Expectations_of_Impact__c.field-meta.xml
<CustomField>
    <fullName>Expectations_of_Impact__c</fullName>
    <label>Expectations of Impact</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>