force-app/main/default/objects/Activity__c/fields/FilterByYear__c.field-meta.xml
<CustomField>
    <fullName>FilterByYear__c</fullName>
    <label>FilterByYear</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2022</fullName>
                <label>2021-2022</label>
            </value>
            <value>
                <fullName>2023</fullName>
                <label>2022-2023</label>
            </value>
            <value>
                <fullName>2024</fullName>
                <default>true</default>
                <label>2023-2024</label>
            </value>
            <value>
                <fullName>2021</fullName>
                <isActive>false</isActive>
                <label>2020-2021</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>