force-app/main/default/objects/Activity__c/fields/GenderOfParticipants_DidNotRespond__c.field-meta.xml
<CustomField>
    <fullName>GenderOfParticipants_DidNotRespond__c</fullName>
    <label>No Response</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>