force-app/main/default/objects/Activity__c/fields/GenderOfParticipants_Tane__c.field-meta.xml
<CustomField>
    <fullName>GenderOfParticipants_Tane__c</fullName>
    <label>Gender Tane</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>