force-app/main/default/objects/Activity__c/fields/GenderOfParticipants_Total__c.field-meta.xml
<CustomField>
    <fullName>GenderOfParticipants_Total__c</fullName>
    <formula>GenderOfParticipants_DidNotRespond__c  +  GenderOfParticipants_Tane__c  +  GenderOfParticipants_Wahine__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gender Of Participants Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>