force-app/main/default/objects/Activity__c/fields/GenderOfParticipants_Wahine__c.field-meta.xml
<CustomField>
    <fullName>GenderOfParticipants_Wahine__c</fullName>
    <label>Gender Wahine</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>