force-app/main/default/objects/Activity__c/fields/Google_Map__c.field-meta.xml
<CustomField>
    <fullName>Google_Map__c</fullName>
    <formula>IMAGE(&quot;https://maps.googleapis.com/maps/api/staticmap?center=&quot; +  Street__c  + &quot;,&quot; + City__c + &quot;,&quot; + State__c + &quot;,&quot; + Country__c + &quot;&amp;zoom=13&amp;size=600×300&amp;markers=color:red|&quot; + Street__c + &quot;,&quot; + City__c + &quot;,&quot; + State__c + &quot;,&quot; + Country__c + &quot;&amp;sensor=false&quot;
, &quot;No map available&quot;, 300, 600)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Google Map</label>
    <type>Text</type>
</CustomField>