force-app/main/default/objects/Activity__c/fields/HOP_Outcome__c.field-meta.xml
<CustomField>
    <fullName>HOP_Outcome__c</fullName>
    <label>HOP Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>--None--</fullName>
            </value>
            <value>
                <fullName>1.1 Kaiwhakahaere participating as Leaders in their community</fullName>
            </value>
            <value>
                <fullName>2.1 Increased opportunities to participate in sport and traditional physical recreation</fullName>
            </value>
            <value>
                <fullName>3.1 Revitalisation and further development of sport and traditional physical recreation</fullName>
            </value>
            <value>
                <fullName>1.2 Increased Māori Sports Management capcity - leveraging potential and capacity</fullName>
            </value>
            <value>
                <fullName>2.2 Increased demand for Māori and non-Māori communities for opportunities to participate in Māori-led sport and traditional physical recreation</fullName>
            </value>
            <value>
                <fullName>3.2 Increased organisational capacity and capability to provide a range of formally organised sport and recreation opportunities in a diversity of Māori and non-Māori settings</fullName>
            </value>
            <value>
                <fullName>2.3 Increased opportunities for Māori and non-Māori to perform and excel in Māori sport and traditional physical recreation</fullName>
            </value>
            <value>
                <fullName>3.3 Strong Māori organisations and networks providing and promoting a wide range of high quality sport and traditional physical recreation opportunities in diverse Māori and non-Māori settings</fullName>
            </value>
            <value>
                <fullName>1.3 Increased Māori Sports Leadership sustaining Māori success</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>