force-app/main/default/objects/Activity__c/fields/HOP_Outcome_Domain__c.field-meta.xml
<CustomField>
    <fullName>HOP_Outcome_Domain__c</fullName>
    <label>HOP Outcome Domain</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Leaders for the future</fullName>
            </value>
            <value>
                <fullName>Developing participation opportunities</fullName>
            </value>
            <value>
                <fullName>Strengthening infrastructure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>