force-app/main/default/objects/Activity__c/fields/Is_Activity_Deleted__c.field-meta.xml
<CustomField>
    <fullName>Is_Activity_Deleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Activity Archived</label>
    <type>Checkbox</type>
</CustomField>