force-app/main/default/objects/Activity__c/fields/IsPlannedActivity__c.field-meta.xml
<CustomField>
    <fullName>IsPlannedActivity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsPlannedActivity</label>
    <type>Checkbox</type>
</CustomField>