force-app/main/default/objects/Activity__c/fields/NoOfGroups_Hapu__c.field-meta.xml
<CustomField>
    <fullName>NoOfGroups_Hapu__c</fullName>
    <label>No Of Groups Hapu</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>