force-app/main/default/objects/Activity__c/fields/NoOfGroups_Iwi__c.field-meta.xml
<CustomField>
    <fullName>NoOfGroups_Iwi__c</fullName>
    <label>No Of Groups Iwi</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>