force-app/main/default/objects/Activity__c/fields/NoOfGroups_Kaupapa_H_kinakina__c.field-meta.xml
<CustomField>
    <fullName>NoOfGroups_Kaupapa_H_kinakina__c</fullName>
    <defaultValue>0</defaultValue>
    <label>No Of Groups Kaupapa Hākinakina</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>