force-app/main/default/objects/Activity__c/fields/NoOfGroups_Kura_Kaupapa__c.field-meta.xml
<CustomField>
    <fullName>NoOfGroups_Kura_Kaupapa__c</fullName>
    <label>No Of Groups Kura Kaupapa</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>